# SignalShack

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/adapters/: airnow.py  base.py  google_pollen.py  mta.py  mta_rt.py  nws.py  open_meteo.py  weather_derive.py
backend/app/admin/: routes.py
backend/app/core/: backup.py  config_mgr.py  db.py  diagnostics.py  layout.py  secrets.py  security.py  snapshots.py
backend/app/display/: service.py
backend/app/jobs/: scheduler.py
backend/app/migrations/: 0001_initial.sql  0002_kv.sql  0003_monitor_config.sql
backend/app/rules/: engine.py  seeds.json  sync.py  user.py
backend/app/static/: manifest.json
backend/app/templates/: _board.html  _wx_icons.html  announce.html  display.html  pin.html
backend/app/templates/admin/: _leg_row.html  _leg_stops.html  _preview.html  _rule_row.html  announcements.html  base.html  layout.html  login.html  privacy.html  rules.html  (+9 more)
backend/app/transit/: gtfs.py
backend/tests/: test_admin.py  test_admin_restart.py  test_airnow_and_secrets.py  test_announce_and_pins.py  test_chained_routes.py  test_density.py  test_display_service.py  test_forecast_cards.py  test_gate1_punchlist.py  test_gtfs_refresh.py  test_hardening.py  test_layout.py  test_mta.py  test_mta_rt.py  test_pip_and_severity.py  test_pollen.py  test_rule_editor.py  test_rules_engine.py  test_segments.py  test_smoke.py  test_source_registry.py  test_tomorrow_and_windows.py  test_weather_adapters.py  test_wizard.py
(+5 files in other folders)
