[project]
name = "signalshack"
version = "0.1.0"
description = "Local-first home signal appliance — turns open data into household meaning"
requires-python = ">=3.12"
license = "AGPL-3.0-only"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "jinja2>=3.1,<4",
    "apscheduler>=3.10,<4",
    "argon2-cffi>=23,<26",
    "httpx>=0.27,<1",
    "itsdangerous>=2.2,<3",
    "python-multipart>=0.0.12,<1",
    "qrcode>=7.4,<9",
    "cryptography>=43,<46",
    "gtfs-realtime-bindings>=1.0,<2",   # C2 slice 3: MTA protobuf trip updates
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]  # incl. flake8-bandit security checks
ignore = ["S101"]  # asserts fine in tests

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106", "S107"]  # deliberate fake secrets/passwords in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
